--- a/.gitlab/regression_tests.yml
+++ b/.gitlab/regression_tests.yml
@@ -51,7 +51,7 @@
   tags:
     - windows-10
     - VS2019
-    - cuda-${WIN_CUDA}
+    - cuda-${CUDA}
     - on-prem
     # We need to make sure the regression tests always run on the same GPU.
     - gpu-v100
