DOR-1384 refactored CUDA build jobs to inherit from a common core and made CUDA 13 archives have cuda-13.0 in their name

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -424,44 +424,33 @@ build_archive:linux:arm64:jammy:
     - .build_dorado_archive
     - .on_nightly_or_manual
 
-build_archive:linux:x86:cuda11:
+.build_archive:linux:x86:
   image: ${DORADO_DOCKER_ROOT}/dorado-rocky8-cuda-${CUDA}.0:1.0
+  script:
+    - source /opt/rh/gcc-toolset-11/enable
+    - !reference [.build_dorado_archive, script]
+  extends:
+    - .linux_runner
+    - .build_dorado_archive
+    - .on_nightly_or_manual
+
+build_archive:linux:x86:cuda11:
   variables:
     CUDA: "11.8"
-  script:
-    - source /opt/rh/gcc-toolset-11/enable
-    - !reference [.build_dorado_archive, script]
   extends:
-    - .linux_runner
-    - .build_dorado_archive
-    - .on_nightly_or_manual
+    - .build_archive:linux:x86
 
 build_archive:linux:x86:cuda12:
-  image: ${DORADO_DOCKER_ROOT}/dorado-rocky8-cuda-${CUDA}.0:1.0
-  variables:
-    BUILD_OPTIONS: ""
-  script:
-    - source /opt/rh/gcc-toolset-11/enable
-    - !reference [.build_dorado_archive, script]
   extends:
-    - .linux_runner
-    - .build_dorado_archive
-    - .on_nightly_or_manual
+    - .build_archive:linux:x86
 
 build_archive:linux:x86:cuda13:
-  image: ${DORADO_DOCKER_ROOT}/dorado-rocky8-cuda-${CUDA}.0:1.0
   variables:
-    BUILD_OPTIONS: ""
     CUDA: "13.0"
-  script:
-    - source /opt/rh/gcc-toolset-11/enable
-    - !reference [.build_dorado_archive, script]
   extends:
-    - .linux_runner
-    - .build_dorado_archive
-    - .on_nightly_or_manual
+    - .build_archive:linux:x86
 
-build_archive:windows:
+.build_archive:windows:
   before_script:
     - export CUDA_TOOLKIT=$(cygpath -u $(cygpath -d "${WIN_CUDA_TOOLKIT}"))
     - export BUILD_OPTIONS="-A x64 -T cuda=${CUDA} -DCUDAToolkit_ROOT=${CUDA_TOOLKIT} -D WIN_THREADS=4 -G \"Visual Studio 16 2019\""
@@ -469,17 +458,16 @@ build_archive:windows:
     - .windows_runner
     - .build_dorado_archive
     - .on_nightly_or_manual
+
+build_archive:windows:cuda12:
+  extends:
+    - .build_archive:windows
 
 build_archive:windows:cuda13:
   variables:
     CUDA: "13.0"
-  before_script:
-    - export CUDA_TOOLKIT=$(cygpath -u $(cygpath -d "${WIN_CUDA_TOOLKIT}"))
-    - export BUILD_OPTIONS="-A x64 -T cuda=${CUDA} -DCUDAToolkit_ROOT=${CUDA_TOOLKIT} -D WIN_THREADS=4 -G \"Visual Studio 16 2019\""
   extends:
-    - .windows_runner
-    - .build_dorado_archive
-    - .on_nightly_or_manual
+    - .build_archive:windows
 
 build_archive:macos:arm:
   extends:
@@ -675,7 +663,7 @@ test_archive:windows:cpu:
     - windows-11
     - no-gpu
   needs:
-    - build_archive:windows
+    - build_archive:windows:cuda12
 
 # Test that models can be downloaded and run.
 test:model_download:linux:x86:focal:
