--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -139,7 +139,8 @@ variables:
   # pysam is not available on all platforms, but the tests can run without it.
   - echo Running tetra unit tests
   - pip install pysam "--only-binary=:all:" || true
-  - pip install -e tetra
+  # Note we use --prefer-binary to avoid issues with h5py 3.15, see DOR-1410
+  - pip install --prefer-binary -e tetra
   - cd tetra
   - python -m unittest discover
   - cd -
