--- a/.gitlab/sanitizers-ci.yml
+++ b/.gitlab/sanitizers-ci.yml
@@ -44,13 +44,13 @@
 
 # Sanitizer jobs
 
-sanitize:linux:x86:focal:
+sanitize:linux:x86:noble:
   extends:
-    - build:linux:x86:focal
+    - build:linux:x86:noble
     - .sanitizer_common_linux
   before_script:
     # Run both base setups
-    - !reference ["build:linux:x86:focal", before_script]
+    - !reference ["build:linux:x86:noble", before_script]
     - !reference [.sanitizer_common_linux, before_script]
     # We need to modify ASAN_OPTIONS for the following reasons:
     #   protect_shadow_gap - CUDA maps the same memory region as ASAN, so tell it to move the shadow
