--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -282,6 +282,7 @@ build:linux:x86:coverage:
   variables:
     BUILD_OPTIONS: "-DGENERATE_TEST_COVERAGE=1"
     BUILD_TARGET: "dorado_test_coverage"
+    BUILD_TYPE: "Debug"
   extends:
     - .linux_build_dependencies
     - .linux_runner
