--- a/.gitlab/regression_tests.yml
+++ b/.gitlab/regression_tests.yml
@@ -75,7 +75,7 @@
     OUTPUT_SPEC_REPO_URL: "${ONT_OUTPUT_SPEC_REPO}-/archive/${OUTPUT_SPEC_REF}/ont-output-specification-${OUTPUT_SPEC_REF}.zip"
     SPECIFICATION_FILE: "ont_output_spec.zip"
     VALIDATOR_COMMIT: "fb80ac5354580708aa1da4b65c0fb941ce4c3f37"
-    TEST_DATA_COMMIT: "version_0.2"
+    TEST_DATA_COMMIT: "99629d13b1192593f1daeed822762288a22c757b"
   script:
     - !reference [.extract_archive, script]
     # Update PATH to reflect where these binaries are
