--- a/.gitlab/regression_tests.yml
+++ b/.gitlab/regression_tests.yml
@@ -64,7 +64,7 @@
 
 
 ######################
-# Regression testing #
+# Regression Testing #
 ######################
 
 .regression_test:
@@ -130,7 +130,10 @@ regression_test_platforms:linux:x86:cuda12:
   except:
     - tags
 
-# dorado tests
+####################
+# Regression Tests #
+####################
+
 regression_test:linux:arm64:jammy:
   image: ${DORADO_DOCKER_ROOT}/dorado-l4t-r36.4.0:1.0
   variables:
@@ -188,8 +191,210 @@ regression_test:windows:
     - tags
 
 
+################
+# Benchmarking #
+################
+
+.speed_regression_test:
+  stage: regression_test
+  variables:
+    GIT_SUBMODULE_STRATEGY: normal
+  script:
+    - !reference [.prepare_git-lfs, script]
+    - git lfs pull
+    - !reference [.extract_archive, script]
+    # Update PATH to reflect where these binaries are
+    - export PATH=${PWD}/${EXTRACTED_PATH}/bin:${PWD}/${EXTRACTED_PATH}/lib:${PATH}
+    - pip install -e tetra # Need to use -e since data files relative to project
+    - development_scripts/run_perf_regression_test.sh ${REGRESSION_TEST_NAME} ${PYGUPPY_WHEEL}
+  after_script:
+    # Upload any results to artifactory, even if the tests failed.
+    - source perf_venv/*/activate
+    - python -m pip install python-dateutil psycopg2-binary
+    - python tetra/tetra/upload_perf_results.py --dorado --output_dir regression_test/output
+  rules:
+    - if: "$NIGHTLY_BUILD"
+    - if: $CI_PIPELINE_SOURCE != 'merge_request_event'
+      when: manual
+      allow_failure: true
+  artifacts:
+    when: always
+    paths:
+      - regression_test/output/**/*.log
+      - regression_test/output/**/*.trace
+    expire_in: 90 days
+  timeout: 1h 30m
+
+regression_tests:speed:linux:arm64:jammy:
+  image: ${DORADO_DOCKER_ROOT}/dorado-l4t-r36.4.0:1.0
+  parallel:
+      matrix:
+          - REGRESSION_TEST_NAME:
+            - TestBasecallingSpeeds_kit14_30kbp.test_standard_basecalling_speeds
+            - TestBasecallingSpeeds_kit14_30kbp.test_modbase_basecalling_speeds_hac
+            - TestBasecallingSpeeds_kit14_30kbp.test_modbase_basecalling_speeds_sup
+            - TestBasecallingSpeeds_kit14_30kbp.test_server_barcoding_speeds_96_kit
+            - TestBasecallingSpeeds_kit14_30kbp.test_server_alignment_speeds
+            - TestBasecallingSpeeds_kit14_30kbp.test_precise_condition_speeds
+            - TestBasecallingSpeeds_kit14_200bp.test_standard_basecalling_speeds
+            - TestBasecallingSpeeds_kit14_200bp.test_modbase_basecalling_speeds_hac
+            - TestBasecallingSpeeds_kit14_200bp.test_modbase_basecalling_speeds_sup
+            - TestBasecallingSpeeds_kit14_200bp.test_server_barcoding_speeds_96_kit
+            - TestBasecallingSpeeds_kit14_200bp.test_server_alignment_speeds
+            - TestBasecallingSpeeds_kit14_200bp.test_precise_condition_speeds
+  variables:
+    BUILD_TYPE: Release
+    BUILD_CUDA: 1
+    ONT_PYTHON_URL: ${ONT_PYTHON_URL_PREFIX}/${ONT_PYTHON_FILENAME_LINUX_ARM64_312}
+  needs:
+    - build_archive:linux:arm64:jammy
+  extends:
+    - .linux_regression_dependencies
+    - .linux_orin_cuda_12_runner
+    - .speed_regression_test
+
+.regression_tests:speed:linux:x86:cuda12:
+  image: ${DORADO_DOCKER_ROOT}/dorado-24.04-cuda-${CUDA}.0:1.1
+  variables:
+    BUILD_TYPE: Release
+    BUILD_CUDA: 1
+    ONT_PYTHON_URL: ${ONT_PYTHON_URL_PREFIX}/${ONT_PYTHON_FILENAME_LINUX_X86_312}
+  needs:
+    - build_archive:linux:x86:cuda12
+  extends:
+    - .linux_regression_dependencies
+    - .linux_regression_runner
+    - .speed_regression_test
+
+regression_tests:speed:linux:x86:V100:
+  parallel:
+      matrix:
+          - REGRESSION_TEST_NAME:
+            - TestBasecallingSpeeds_kit14_30kbp.test_standard_basecalling_speeds
+            - TestBasecallingSpeeds_kit14_30kbp.test_modbase_basecalling_speeds_hac
+            - TestBasecallingSpeeds_kit14_30kbp.test_modbase_basecalling_speeds_sup
+            - TestBasecallingSpeeds_kit14_30kbp.test_server_barcoding_speeds_96_kit
+            - TestBasecallingSpeeds_kit14_30kbp.test_server_alignment_speeds
+            - TestBasecallingSpeeds_kit14_30kbp.test_precise_condition_speeds
+            - TestBasecallingSpeeds_kit14_200bp.test_standard_basecalling_speeds
+            - TestBasecallingSpeeds_kit14_200bp.test_modbase_basecalling_speeds_hac
+            - TestBasecallingSpeeds_kit14_200bp.test_modbase_basecalling_speeds_sup
+            - TestBasecallingSpeeds_kit14_200bp.test_server_barcoding_speeds_96_kit
+            - TestBasecallingSpeeds_kit14_200bp.test_server_alignment_speeds
+            - TestBasecallingSpeeds_kit14_200bp.test_precise_condition_speeds
+  variables:
+    GPU_DEVICE_NAME: "V100"
+  needs:
+    - build_archive:linux:x86:cuda12
+  extends:
+    - .regression_tests:speed:linux:x86:cuda12
+  tags:
+    - gpu-v100
+
+regression_tests:speed:linux:x86:A100:
+  parallel:
+      matrix:
+          - REGRESSION_TEST_NAME:
+            - TestBasecallingSpeeds_kit14_30kbp.test_standard_basecalling_speeds
+            - TestBasecallingSpeeds_kit14_30kbp.test_modbase_basecalling_speeds_hac
+            - TestBasecallingSpeeds_kit14_30kbp.test_modbase_basecalling_speeds_sup
+            - TestBasecallingSpeeds_kit14_30kbp.test_server_barcoding_speeds_96_kit
+            - TestBasecallingSpeeds_kit14_30kbp.test_server_alignment_speeds
+            - TestBasecallingSpeeds_kit14_30kbp.test_precise_condition_speeds
+            - TestBasecallingSpeeds_kit14_200bp.test_standard_basecalling_speeds
+            - TestBasecallingSpeeds_kit14_200bp.test_modbase_basecalling_speeds_hac
+            - TestBasecallingSpeeds_kit14_200bp.test_modbase_basecalling_speeds_sup
+            - TestBasecallingSpeeds_kit14_200bp.test_server_barcoding_speeds_96_kit
+            - TestBasecallingSpeeds_kit14_200bp.test_server_alignment_speeds
+            - TestBasecallingSpeeds_kit14_200bp.test_precise_condition_speeds
+  variables:
+    GPU_DEVICE_NAME: "A100"
+  needs:
+    - build_archive:linux:x86:cuda12
+  extends:
+    - .regression_tests:speed:linux:x86:cuda12
+  tags:
+    - gpu-a100
+
+regression_tests:speed:windows:A6000:
+  parallel:
+      matrix:
+          - REGRESSION_TEST_NAME:
+            - TestBasecallingSpeeds_kit14_30kbp.test_standard_basecalling_speeds
+            - TestBasecallingSpeeds_kit14_30kbp.test_modbase_basecalling_speeds_hac
+            - TestBasecallingSpeeds_kit14_30kbp.test_modbase_basecalling_speeds_sup
+            - TestBasecallingSpeeds_kit14_30kbp.test_server_barcoding_speeds_96_kit
+            - TestBasecallingSpeeds_kit14_30kbp.test_server_alignment_speeds
+            - TestBasecallingSpeeds_kit14_30kbp.test_precise_condition_speeds
+            - TestBasecallingSpeeds_kit14_200bp.test_standard_basecalling_speeds
+            - TestBasecallingSpeeds_kit14_200bp.test_modbase_basecalling_speeds_hac
+            - TestBasecallingSpeeds_kit14_200bp.test_modbase_basecalling_speeds_sup
+            - TestBasecallingSpeeds_kit14_200bp.test_server_barcoding_speeds_96_kit
+            - TestBasecallingSpeeds_kit14_200bp.test_server_alignment_speeds
+            - TestBasecallingSpeeds_kit14_200bp.test_precise_condition_speeds
+  variables:
+    BUILD_TYPE: Release
+    BUILD_CUDA: 1
+    GPU_DEVICE_NAME: "A6000"
+  extends:
+    - .windows_regression_dependencies
+    - .windows_regression_runner
+    - .speed_regression_test
+  needs:
+    - build_archive:windows:cuda12
+  tags:
+    - gpi-a6000
+
+regression_tests:speed:macos:arm:
+  parallel:
+      matrix:
+          - REGRESSION_TEST_NAME:
+            - TestBasecallingSpeeds_kit14_30kbp.test_standard_basecalling_speeds
+            - TestBasecallingSpeeds_kit14_30kbp.test_modbase_basecalling_speeds_hac
+            - TestBasecallingSpeeds_kit14_30kbp.test_modbase_basecalling_speeds_sup
+            - TestBasecallingSpeeds_kit14_30kbp.test_server_barcoding_speeds_96_kit
+            - TestBasecallingSpeeds_kit14_30kbp.test_server_alignment_speeds
+            - TestBasecallingSpeeds_kit14_30kbp.test_precise_condition_speeds
+            - TestBasecallingSpeeds_kit14_200bp.test_standard_basecalling_speeds
+            - TestBasecallingSpeeds_kit14_200bp.test_modbase_basecalling_speeds_hac
+            - TestBasecallingSpeeds_kit14_200bp.test_modbase_basecalling_speeds_sup
+            - TestBasecallingSpeeds_kit14_200bp.test_server_barcoding_speeds_96_kit
+            - TestBasecallingSpeeds_kit14_200bp.test_server_alignment_speeds
+            - TestBasecallingSpeeds_kit14_200bp.test_precise_condition_speeds
+  variables:
+    BUILD_TYPE: Release
+    BUILD_CUDA: 1
+  extends:
+    - .osx_regression_dependencies
+    - .osx_arm_regression_runner
+    - .speed_regression_test
+  needs:
+    - build_archive:macos:arm
+
+regression_tests:speed:email:
+  image: ${DORADO_DOCKER_ROOT}/dorado-l4t-r36.4.0:1.0
+  extends:
+    - .linux_regression_dependencies
+    - .linux_regression_runner
+  stage: notify
+  when: always
+  dependencies: []
+  variables:
+    GIT_SUBMODULE_STRATEGY: normal
+  rules:
+    - if: "$NIGHTLY_BUILD"
+  script:
+    # Only run this once a week.
+    - if [[ $(date +%u) -ne 5 ]]; then echo "No email today"; exit 0; fi
+    # Install deps.
+    - python -m pip install -e tetra
+    - python -m pip install matplotlib python-dateutil psycopg2-binary
+    # Generate graphs and send email.
+    - python tetra/tetra/graph_perf_results.py --dorado --output_dir graphs --send_email
+
+
 ##################
-# Rebase scripts #
+# Rebase Scripts #
 ##################
 
 run_rebase:
